# dataset

./: .gitignore  ABGABE.md  __init__.py  cloudSEN12_links.txt  data_inspection.ipynb  data_selection.ipynb  download_zips.ipynb  inspect_data.ipynb  main.R  main.py  pyproject.toml  select_cloudfree.py  submit_hpo.py  submit_lwf.py  submit_test.py  tacoreader.ipynb  test_model.ipynb  test_training.ipynb  test_training.py  utils.R
data/: cloudsen12_initial_cloudfree.csv  cloudsen12_initial_cloudfree_dev.csv
src/: dataset.py  misc.py  model.py  select_patches.py  submit_lwf.py  train.py  utils.py
src/training/: basic_unet_trainer.py  lwf_unet_aspp_trainer.py
src/tuning/: hpo.py  optuna_hpo.py  optuna_hpo_cs12validate.py
