[project]
name = "cloudsen12"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "earthengine-api==1.6.11",
    "ipykernel>=7.2.0",
    "numpy>=2.4.2",
    "polars>=1.38.1",
    "rasterio>=1.5.0",
    "tacoreader>=2.4.20",
    "tifffile>=2026.3.3",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]
