[project]
name = "cloudsen12"
version = "0.2.0"
description = "Fork of cloudSEN12 repository, combining with SatelliteCloudGenerator for training DL cloud segmentation on synthetically generated cloud masks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "earthengine-api==1.6.11",
    "imagecodecs>=2026.3.6",
    "ipykernel>=7.2.0",
    "kornia>=0.8.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "polars>=1.38.1",
    "rasterio>=1.5.0",
    "submitit>=1.5.4",
    "tacoreader>=2.4.20",
    "tensorboard>=2.20.0",
    "tifffile>=2026.3.3",
    "torch>=2.10.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.25.0",
]
